# ista-calista

./: .coverage  .gitignore  CLAUDE.md  INFO.md  LICENCE  README.md  __init__.py  commands.txt  config_flow.py  const.py  coordinator.py  flake.nix  hacs.json  icons.json  manifest.json  out.txt  pyproject.toml  quality-score.txt  sensor.py  util.py
.github/workflows/: tests.yml  validate.yml
custom_components/ista-calista/: coordinator.py  manifest.json  strings.json
custom_components/ista-calista/translations/: es.json
custom_components/ista_calista/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  sensor.py  services.yaml  strings.json
custom_components/ista_calista/translations/: es.json
ha_ista_calista.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ista-calista/: .gitignore  __init__.py  config_flow.py  coordinator.py  icons.json  pycalista_ista  sensor.py  strings.json
tests/: __init__.py  conftest.py  const.py  test_config_flow.py  test_const.py  test_coordinator.py  test_diagnostics.py  test_entry_lifecycle.py  test_init.py  test_options_flow.py  test_sensor.py  test_sensor_statistics.py  test_services.py
translations/: es.json
